# research-environment

./: README.md  docker-compose.yml
client/: Dockerfile
server/: Dockerfile  pyproject.toml
server/research-environment-server/: __init__.py  api.py  applications.py  datasets.py
