[tool.poetry]
name = "research-environment-server"
version = "0.1.0"
description = "Provision cloud resources for scientific research"
authors = ["Asher Baltzell <asherkhb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
